--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://tahavahedi.github.io/CNpage",
+    "homepage": "https://tahavahedi.github.io/CNPage/",
     "name": "react-tailwind-website",
     "version": "0.1.0",
     "private": true,
